# soda-lending

./: .gitignore  .gitmodules  README.md
gadget/deploy/: Cargo.toml
gadget/deploy/src/: error.rs  lib.rs  main.rs  types.rs
gadget/magic/: Cargo.toml
gadget/magic/src/: main.rs
gadget/wasm/: Cargo.toml
gadget/wasm/src/: error.rs  lib.rs
gadget/wasm/src/math/: common.rs  decimal.rs  mod.rs
gadget/wasm/src/state/: last_update.rs  mod.rs  pack.rs  pubkey.rs  reserve.rs
lending/: Cargo.toml
lending/src/: entrypoint.rs  error.rs  instruction.rs  invoker.rs  lib.rs  macros.rs  processor.rs
lending/src/dex/: mod.rs  orca.rs  raydium.rs
lending/src/lp_oracle/: mod.rs  standard.rs
lending/src/oracle/: chainlink.rs  dex_oracle.rs  mod.rs  pyth.rs  switchboard.rs
lending/src/state/: last_update.rs  manager.rs  market_reserve.rs  mod.rs  rate_model.rs  unique_credit.rs  user_obligation.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  pyth.rs
program/src/math/: rate.rs
program/src/oracle/: chainlink.rs  mod.rs  pyth.rs  switchboard.rs
program/src/state/: README.md  asset.rs  francium.rs  last_update.rs  manager.rs  market_reserve.rs  mod.rs  obligation.rs  oracle.rs  rate_model.rs  rate_oracle.rs  reserve.rs  unique_credit.rs  user_obligation.rs  utils.rs
proxy/: Cargo.toml  README.md
proxy/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
