[package]
name = "soda-lending"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.6"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-swap = { path = "../solana-program-library/token-swap/program", features = [ "no-entrypoint" ] }
switchboard-program = "0.2.0"
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-program-test = "1.9.6"
solana-sdk = "1.9.6"
serde = "1.0"
serde_yaml = "0.8"

[features]
default = []
no-entrypoint = []
test-bpf = []
friend = []
devnet = []
unique-credit = []

[lib]
crate-type = ["cdylib", "lib"]