[package]
name = "soda-lending"
version = "0.1.0"
authors = ["gyllone <gyl19930522@163.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
switchboard-program = "0.1.52"
thiserror = "1.0"
typenum = "1.14.0"
uint = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
serde = "1.0"
serde_yaml = "0.8"

[features]
default = ["devnet"]
no-entrypoint = []
test-bpf = []
friend = []
devnet = []
unique-credit = []

[lib]
crate-type = ["cdylib", "lib"]