[package]
name = "deploy"
version = "0.1.0"
authors = ["gyllone <gyl19930522@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.7.10"
solana-client = "1.7.10"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
soda-lending-contract = { path = "../../program", features = [ "no-entrypoint" ] }