[package]
name = "deploy"
version = "0.1.0"
authors = ["gyllone <gyl19930522@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.7.11"
solana-client = "1.7.11"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
soda-lending-contract = { path = "../../program", features = [ "no-entrypoint", "case-injection" ] }
bincode = "1.3.3"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"