[package]
name = "wasm"
version = "0.1.0"
authors = ["gyllone <gyl19930522@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"
soda-lending-contract = { path = "../../program", features = [ "no-entrypoint" ] }

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

# [features]
# default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"