[package]
name = "wasm"
version = "0.1.0"
authors = ["gyllone <gyl19930522@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"
uint = "0.9"
thiserror = "1.0"
arrayref = "0.3.6"
bytemuck = "1.7.2"
bs58 = "0.3.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

# [features]
# default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"